# robo_pose

./: .gitignore  LICENSE  README.md  callgrind.out.151186  frames.gv
src/fusion/: CMakeLists.txt  DoxyFile_temp  Doxyfile  package.xml  txt.txt
src/fusion/html/: CMakeLists_8txt.html  README_8md.html  animation_8cpp.html  animation_8cpp.js  animation_8cpp__incl.map  animation_8cpp__incl.md5  annotated.html  annotated_dup.js  bar_8cpp.html  bar_8cpp.js  bar_8cpp__incl.map  bar_8cpp__incl.md5  basic_8cpp.html  basic_8cpp.js  basic_8cpp__incl.map  basic_8cpp__incl.md5  car_8cpp.html  car_8cpp__incl.map  car_8cpp__incl.md5  car_8hpp.html  car_8hpp__dep__incl.map  car_8hpp__dep__incl.md5  car_8hpp__incl.map  car_8hpp__incl.md5  car_8hpp_source.html  classFilter_1_1Car-members.html  classFilter_1_1Car.html  classFilter_1_1Car.js  classFilter_1_1Car__coll__graph.map  classFilter_1_1Car__coll__graph.md5  classFilter_1_1Car__inherit__graph.map  classFilter_1_1Car__inherit__graph.md5  classFilter_1_1ConstantHeadingRate-members.html  classFilter_1_1ConstantHeadingRate.html  classFilter_1_1ConstantHeadingRate.js  classFilter_1_1ConstantHeadingRate__coll__graph.map  classFilter_1_1ConstantHeadingRate__coll__graph.md5  classFilter_1_1ConstantHeadingRate__inherit__graph.map  classFilter_1_1ConstantHeadingRate__inherit__graph.md5  classFilter_1_1Ekf-members.html  (+384 more)
src/fusion/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  defines_0.js  (+70 more)
src/fusion/include/fusion/: car.hpp  constant_heading_rate.hpp  ekf.hpp  filter_factory.hpp  filter_node.hpp  fusion.hpp  logger.hpp  measurement_model.hpp  mediator.hpp  motion_model.hpp  motion_model_factory.hpp  observations.hpp  quadcopter.hpp  sensorData.hpp  sensor_data.hpp  state_space.hpp  state_space_factory.hpp  visualization.hpp
src/fusion/launch/: cartographer.launch.py  cartographer_pure_localization.launch.py  occupancy_grid.launch.py  t32.launch.py  test.launch.py
src/fusion/params/: cartographer.lua  cartographer_pure_localization.lua  ekf.yaml  ekf_arbitrary_states.yaml  gazebo_config.yaml  my_controllers.yaml
src/fusion/rviz/: rviz.rviz
src/fusion/script/: gui.py
src/fusion/src/: car.cpp  constant_heading_rate.cpp  ekf.cpp  filter_factory.cpp  filter_node.cpp  fusion.cpp  main.cpp  mediator.cpp  motion_model.cpp  motion_model_factory.cpp  quadcopter.cpp  sensorData.cpp  sensor_data.cpp  state_space.cpp  visualization.cpp
src/fusion/test/: CMakeLists.txt  test_autodiff.cpp  test_eigen.cpp  test_ekf.cpp  test_main.cpp  test_motion_model.cpp  test_motion_model_factory.cpp  test_node.cpp  test_quad.cpp  test_state_space.cpp  test_visualization.cpp  txt.txt
src/fusion/urdf/: control.urdf.xacro  gazebo_control.xacro  imu.xacro  imu0.xacro  imu1.xacro  robot.urdf.xacro  robot_core.xacro  t32.urdf.xacro
src/fusion/worlds/: animated_box_static.world  empty.world.xml  t32World.world.xml
src/model/: CMakeLists.txt  package.xml  plugins.xml
src/model/include/model/: model.hpp  visibility_control.h
src/model/src/: load.cpp  model.cpp
